# lancedb-server

./: .env.example  .gitignore  AUTHOR  README.md  diagnose_replicas.py  main.py  pyproject.toml  requirements.txt
.understand-anything/: .understandignore  diff-overlay.json  fingerprints.json  knowledge-graph.json  meta.json
app/: __init__.py  config.py  embedding_fallback.py  main.py  relation_index.py  schema.py  schema_generic.py  store.py  ui_gradio.py  ui_gradio_generic.py
app/generic/: __init__.py  adapters.py  core.py
app/routers/: chunks.py  health.py  meta.py  relations.py  search.py  v2.py
app/static/: ui.html
data_busy2/p_S0gxNDkzMjA0MzA3NzMzMTY4MTI4XzIwMjYwNTEzMTcxNzEy.lance/_transactions/: 0-ef39037b-d571-4050-802b-89606b2efe2e.txn  1-015fafd6-306c-4b55-8daa-36f030901521.txn  10-517ac3fc-234d-4021-ba97-70d80a4c799d.txn  11-d6df24fe-f7fb-4462-b6df-7c4e13144a9a.txn  12-e06641bc-bb00-4a2b-900b-c8a3b064005d.txn  13-44dbdca2-d167-484c-98ab-d2cc5db078e5.txn  14-e2426373-2a8f-48ff-a6ae-30a88b402662.txn  15-cf6ba015-5f47-4d08-aa04-1de947caf907.txn  16-200e4cf6-bcee-4af4-97a6-15a0d7eb07b7.txn  17-fcead6f5-6ab0-48cd-ab0c-82989a125d3f.txn  18-cd15d2a4-a981-4b70-b6b4-ce85d5670aaf.txn  19-e27bc530-e1b2-461d-8598-48cb24e06136.txn  (+16 more)
docs/: lancedb_v2_api.md  migration_runbook.md  v2_api.md  version-diff-report.md
kh-lancedb/: main.py  requirements.txt
kh-lancedb/app/: __init__.py  deps.py  store.py
retrieval_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: shadow_compare.py  warmup_relation_index.py
tests/: test_routes.py
(+49 files in other folders)
