[project]
name = "retrieval-service"
version = "0.2.0"
description = "LanceDB-backed retrieval microservice (legacy v1 + generic v2 vector APIs)"
requires-python = ">=3.10"
dependencies = [
  "lancedb>=0.13",
  "pyarrow>=15",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "eval-type-backport>=0.3",
  "anyio>=4.4",
  "structlog>=24.1",
  "gradio>=4.40",
  "jieba>=0.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
